--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -16,9 +16,11 @@
     >
       posthtml-include
     </a>
-    plugin allows you to add code from other HTML files (fragments) to HTML page
-    files. Fragments are stored in the <code>src/partials</code> folder. The
-    addition occurs when compiling page files, such as <code>index.html</code>.
+    plugin allows you to add code from other
+    HTlkjikhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhML
+    files (fragments) to HTML page files. Fragments are stored in the
+    <code>src/partials</code> folder. The addition occurs when compiling page
+    files, such as <code>index.html</code>.
   </p>
 
   <p>
